# ewubd-ical-generator

./: .gitignore  Cargo.toml  README.txt
api/: calendars.rs  entries.rs  generate.rs
public/: calendar.html  calendar.js  index.html  info.html  stylesheet.css
src/: lib.rs  main.rs  wasm.rs
src-rs/: date_parser.rs  lib.rs  parser.rs  test.rs  utils.rs
templates/: base.html.tera  error.html.tera  index.html.tera  info.html.tera
