[package]
name = "ewu_ics_cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
ics = "0.5.8"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.13.0"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
