[package]
name = "ewu_ics_cal"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
chrono = "0.4.22"
ics = "0.5.8"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.13.0"
wasm-bindgen = "0.2.83"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
wee_alloc = { version = "0.4.5", optional = true }
