[package]
name = "ewu_ics_cal"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
ics = "0.5.8"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.13.0"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
tokio = "1.24.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
vercel_runtime = { version = "1.0.2" }
queryst = "1"
chumsky = "0.9.3"

[lib]
path = "src-rs/lib.rs"

[[bin]]
name = "calendars"
path = "api/calendars.rs"

[[bin]]
name = "entries"
path = "api/entries.rs"

[[bin]]
name = "generate"
path = "api/generate.rs"

[[bin]]
name = "test"
path = "src-rs/test.rs"
